--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0. maximum-scale=1.0"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
     />
-    <title>Vite + React</title>
+    <title>FREST</title>
   </head>
   <body class="box-border font-josefin">
     <div id="root"></div>
